
//=== Regressions

== {es} version 7.8.0

=== Enhancements

* Speedup anomaly detection for the lat_long function. (See {ml-pull}1102[#1102].)
* Reduce CPU scheduling priority of native analysis processes to favor the ES JVM
  when CPU is constrained. (See {ml-pull}1109[#1109].)
* Take `training_percent` into account when estimating memory usage for classification and regression. 
  (See {ml-pull}1111[1111].)
* Adds new `num_matches` and `preferred_to_categories` fields to category output.
  (See {ml-pull}1062[#1062])
* Improve robustness of anomaly detection to bad input data. (See {ml-pull}1114[#1114].)

== {es} version 7.7.0

=== New Features

* Add instrumentation to report statistics related to data frame analytics jobs, i.e.
progress, memory usage, etc. (See {ml-pull}906[#906].)
* Multiclass classification. (See {ml-pull}1037[#1037].)

=== Enhancements

* Improve computational performance of the feature importance computation. (See {ml-pull}1005[1005].)
* Improve initialization of learn rate for better and more stable results in regression
and classification. (See {ml-pull}948[#948].)
* Add number of processed training samples to the definition of decision tree nodes.
(See {ml-pull}991[#991].)
* Add new model_size_stats fields to instrument categorization.  (See {ml-pull}948[#948]
and {pull}51879[#51879], issue: {issue}50794[#50749].)
* Improve upfront memory estimation for all data frame analyses, which were higher than
necessary. This will improve the allocation of data frame analyses to cluster nodes.
(See {ml-pull}1003[#1003].)
* Upgrade the compiler used on Linux from gcc 7.3 to gcc 7.5, and the binutils used in
the build from version 2.20 to 2.34.  (See {ml-pull}1013[#1013].)
* Add instrumentation of the peak memory consumption for data frame analytics jobs.
(See {ml-pull}1022[#1022].)
* Remove all memory overheads for computing tree SHAP values. (See {ml-pull}1023[#1023].)